--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -58,7 +58,7 @@ classes that you can use:
 
   <!-- Github -->
   <li class="navigation__item">
-    <a href="https://github.com/bhilburn" title="Ben on Github">
+    <a href="http://github.com/bhilburn" title="Ben on Github">
       <i class='icon icon-social-github'></i>
       <span class="label">Github</span>
     </a>
@@ -66,7 +66,7 @@ classes that you can use:
 
   <!-- LinkedIn -->
   <li class="navigation__item">
-    <a href="www.linkedin.com/in/benjaminhilburn/" title="Ben on LinkedIn">
+    <a href="http://www.linkedin.com/in/benjaminhilburn/" title="Ben on LinkedIn">
       <i class='icon icon-social-linkedin'></i>
       <span class="label">LinkedIn</span>
     </a>
