--- a/assets/css/uno.css
+++ b/assets/css/uno.css
@@ -1451,6 +1451,12 @@ i {
   font-size: .9em;
   color: #c7c7c7; }
 
+.post-list__meta {
+  display: block;
+  margin: .7em 0 0 0;
+  font-size: .9em;
+  color: #c7c7c7; }
+
 .post-list__meta--date {
   margin-right: .5em;
   color: #c7c7c7; }
