--- a/index.hbs
+++ b/index.hbs
@@ -8,8 +8,10 @@
         <h2 class="post-list__post-title post-title"><a href="{{url}}" title="link to {{{title}}}">{{{title}}}</a></h2>
         <p class="excerpt">{{excerpt}}&hellip;</p>
         <div class="post-list__meta"><time datetime="{{date format="DD MMM YYYY"}}" class="post-list__meta--date date">{{date format="DD MMM YYYY"}}</time> &#8226;
-        <span class="post-list__meta--tags tags">{{tags prefix="on "}}</span>
-        <a href="{{url}}#disqus_thread">Comments</a>
+            <span class="post-list__meta--tags tags">{{tags prefix="on "}}</span> &#8226;
+            <div class="disqus-count">
+                <a href="{{url}}#disqus_thread">Comments</a>
+            </div>
         </div>
         <hr class="post-list__divider" />
       </li>
