might have figured out the Uno comments partial

--- a/assets/css/uno.css
+++ b/assets/css/uno.css
@@ -1451,7 +1451,7 @@ i {
   font-size: .9em;
   color: #c7c7c7; }
 
-.post-list__meta {
+.disqus-count {
   display: block;
   margin: .7em 0 0 0;
   font-size: .9em;
