--- a/partials/comments.hbs
+++ b/partials/comments.hbs
@@ -1,7 +1,7 @@
 <section class="post-comments">
   <div id="disqus_thread"></div>
   <script type="text/javascript">
-      var disqus_shortname = 'bhilburn-ghost'; // required: replace example with your forum shortname
+      var disqus_shortname = 'hokietux'; // required: replace example with your forum shortname
       var disqus_identifier = '{{post.id}}';
       /* * * DON'T EDIT BELOW THIS LINE * * */
       (function() {
