importing custom post content into global css file

--- a/assets/scss/uno.scss
+++ b/assets/scss/uno.scss
@@ -45,3 +45,9 @@
 // ------------------------------
 
 @import '../css/animate.css';
+
+// ------------------------------
+// CUSTOM CSS FOR POST CONTENT
+// ------------------------------
+
+@import 'post-content.scss';
